Closed Bug 1809097 Opened 3 years ago Closed 3 years ago

[loong64][mips64] Failed to build loong64 and mips64 simulator (no member named 'ChunkStoreBufferOffsetFromLastByte' in namespace 'js::gc')

Categories

(Core :: JavaScript Engine: JIT, defect)

defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox108 --- unaffected
firefox109 --- unaffected
firefox110 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux loongarch64; rv:91.0) Gecko/20100101 Firefox/91.0

Steps to reproduce:

Build loong64 and mips64 js simulators.

Actual results:

Build failed with error:

error: no member named 'ChunkStoreBufferOffsetFromLastByte' in namespace 'js::gc'

Expected results:

Build loong64 and mips64 simulators successfully.

This issue is caused by optimizations in bug 1808744, which are not ported to loong64 and mips64 yet.

Regressed by: 1808744
Assignee: nobody → zhaojiazhong-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Set release status flags based on info from the regressing bug 1808744

Pushed by jdemooij@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/511421f9f003 [loong64][mips64] Remove ChunkStoreBufferOffsetFromLastByte. r=jandem
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: