Bug 1809097 - [loong64][mips64] Remove ChunkStoreBufferOffsetFromLastByte. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D166265